# bridges

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
examples/python/: Instructions.md
examples/python/algorithm/pandas/: Makefile  execute.py
examples/python/algorithm/pandas/algorithms/transform/: MantikHeader
examples/python/algorithm/xarray/: Makefile  MantikHeader  run.py
examples/python/bridges/algorithm/pandas/: Makefile  MantikHeader  algorithm_wrapper.py  apply_algorithm.py  main.py  pyproject.toml
examples/python/bridges/algorithm/pandas/simple/: .dockerignore  Makefile  MantikHeader  apply_algorithm.py  main.py  pyproject.toml
examples/python/bridges/algorithm/pandas/simple/algorithms/transform/payload/: algorithm.py  test_algorithm.py
examples/python/bridges/algorithm/pandas/simple/algorithms/transform2/: MantikHeader
examples/python/bridges/algorithm/pandas/simple/algorithms/transform2/payload/: algorithm.py
examples/python/bridges/algorithm/xarray/: Makefile  apply_algorithm.py
examples/python/bridges/dataset/climetlab/: Makefile  MantikHeader  main.py  pyproject.toml
examples/python/bridges/dataset/kmeans/: Makefile  dataset_wrapper.py  get_dataset.py  main.py  pyproject.toml
examples/python/bridges/dataset/kmeans/simple/: Makefile  MantikHeader  dataset_wrapper.py  get_dataset.py  main.py  pyproject.toml
examples/python/bridges/dataset/kmeans/simple/datasets/simple/payload/: dataset.py  test_dataset.py
examples/python/bridges/dataset/maelstrom/: .dockerignore  Makefile  MantikHeader  dataset_wrapper.py  main.py  pyproject.toml
examples/python/bridges/dataset/maelstrom/datasets/powerproduction/: MantikHeader
examples/python/bridges/dataset/maelstrom/datasets/powerproduction/payload/: algorithm.py
examples/python/bridges/dataset/maelstrom/datasets/powerproduction/payload/utils/: density.py  metrics.py  model.py  test_time.py  test_wind.py  wind.py
examples/python/bridges/dataset/maelstrom/datasets/production/payload/: test_algorithm.py
examples/python/bridges/sklearn/: Makefile
examples/python/bridges/sklearn/production/: .dockerignore  Makefile  pyproject.toml  train_algorithm.py
examples/python/bridges/sklearn/simple/: Makefile  pyproject.toml
examples/python/bridges/trainable/sklearn/: Makefile  algorithm_wrapper.py  main.py  pyproject.toml  train_algorithm.py
examples/python/bridges/trainable/sklearn/algorithms/kmeans/payload/: algorithm.py
examples/python/bridges/trainable/sklearn/algorithms/power-production/: MantikHeader
examples/python/bridges/trainable/sklearn/algorithms/power-production/payload/: algorithm.py  test_algorithm.py
examples/python/bridges/trainable/sklearn/algorithms/simple/: MantikHeader
examples/python/bridges/trainable/sklearn/algorithms/simple/payload/: algorithm.py
examples/python/bridges/trainable/sklearn/production/: .dockerignore  Makefile  MantikHeader  pyproject.toml  train_algorithm.py
examples/python/bridges/trainable/sklearn/production/algorithms/gradientboosting/: MantikHeader
examples/python/bridges/trainable/sklearn/production/algorithms/gradientboosting/payload/: algorithm.py  test_algorithm.py
examples/python/bridges/trainable/sklearn/production/algorithms/gradientboosting/payload/utils/: test_pressure.py
examples/python/bridges/trainable/sklearn/simple/: Makefile  pyproject.toml  train_algorithm.py
examples/python/bridges/trainable/sklearn/simple/algorithms/kmeans/: MantikHeader
examples/python/bridges/trainable/sklearn/simple/algorithms/kmeans/payload/: algorithm.py
examples/python/bridges/trainable/sklearn/simple/algorithms/multiply/: MantikHeader
examples/python/climetlab/: Makefile  MantikHeader  pyproject.toml  run.py
examples/python/climetlab/datasets/power-production/payload/: utils.py
examples/python/climetlab/datasets/power-production/tests/: conftest.py  test_utils.py
examples/python/dataset/sklearn/: Makefile  pyproject.toml  run.py
examples/python/dataset/sklearn/datasets/simple/: MantikHeader
examples/python/dataset/sklearn/src/: main.py
examples/python/pandas/: Makefile  MantikHeader  pyproject.toml  run.py
examples/python/pandas/algorithms/transform2/: MantikHeader
examples/python/pandas/datasets/power-production/: MantikHeader
examples/python/pandas/src/: main.py
examples/python/scripts/: Dockerfile.python_bridge  Makefile.integrate  Makefile.python_bridge  integrate.Makefile  python_bridge.Dockerfile  python_bridge.Makefile  train_algorithm.py
examples/python/sklearn/: Makefile  MantikHeader  pyproject.toml  run.py
examples/python/sklearn/datasets/simple/: MantikHeader
examples/python/sklearn/src/: algorithm_wrapper.py  dataset_wrapper.py  main.py
examples/python/trainable/sklearn/: Makefile  MantikHeader  execute.py  run.py
examples/python/trainable/sklearn/src/: main.py
examples/python/xarray/: Makefile  MantikHeader  pyproject.toml  run.py
examples/python/xarray/algorithms/power-production/payload/utils/: __init__.py  dates.py
examples/python/xarray/algorithms/power-production/tests/: conftest.py  test_algorithm.py
examples/python/xarray/src/: main.py
scripts/: docker.Makefile  docker_single.Makefile  singularity.Makefile
scripts/python/: bridge-dev.Makefile  bridge.Makefile  integrate-dev.Makefile  integrate.Makefile
(+44 files in other folders)
