[tool.poetry]
name = "mantik-sklearn-bridge"
description = "Mantik bridge for sklearn"
version = "0.3.0-rc6"
authors = ["Mantik Team <info@mantik.ai>"]
homepage = "https://www.mantik.ai"

[tool.poetry.dependencies]
python = "~3.7.10"
mnp = "0.3.0-rc6"
mantik = "0.3.0-rc6"
scikit-learn = "^0.24.2"
pandas = "1.3.2"
xarray = "0.19.0"
netCDF4 = "1.5.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=1.0.0"]

[tool.pytest.ini_options]
norecursedirs = "target"
